[Fix] body태그 overflow hidden -> visivle 변경 #27

--- a/frontend/src/modules/layout/templates/nav/nav.module.scss
+++ b/frontend/src/modules/layout/templates/nav/nav.module.scss
@@ -4,7 +4,9 @@
   width: 100%;
   height: auto;
   padding: 0.5rem 0;
-  background-color: rgba(0, 0, 0, 0.9);
+  // background-color: rgba(0, 0, 0, 0.9);
+  background-color:rgba(0, 0, 0, 0.9);
+  z-index: 1;
 }
 
 .navContainer {
